# dstopic

./: Cargo.toml  LICENSE  licensezero.json
locales/en-US/: hello.ftl
locales/es-MX/: hello.ftl
src/: lib.rs  localization.rs  main.rs
