[package]
name = "dstopic"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
license = "Parity-6.0.0"

[dependencies]
clap = "2.33.0"
cacache = "1.0.1"
ssri = "3.0.0"
reqwest = "0.9.18"
log = "0.4.6"

[workspace]
members = [".", "packages/*"]
default-members = [".", "packages/*"]
